--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>CRM</title>
     <script defer src="js/main.js"></script>
     <script defer src="js/einstein.js"></script>
+    <script defer src="js/tasks.js"></script>
 </head>
 <body>
 
