--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>CRM</title>
-    <script defer src="js/main.js"></script>
-    <script defer src="js/einstein.js"></script>
-    <script defer src="js/tasks.js"></script>
+    <script defer src="js/task04.js"></script>
+    <script defer src="js/task03.js"></script>
+    <script defer src="js/task02.js"></script>
+    <script defer src="js/task01.js"></script>
 </head>
 <body>
 
